--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
@@ -28,9 +28,9 @@
     "\n",
     "### Course Description\n",
     "\n",
-    " * Predits: 4\n",
+    " * Credits: 4\n",
     " * Prerequisites: ENGR 101 or department-approved equivalent\n",
-    " * Summary: Introduces computer programming terminology and techniques as applied to specific engineering applications. Includes electrical circuit analysis, audio signal processing, image processing, and interfacing with hardware such as microcontrollers and analog-to-digital converters application. Covers reading and documenting code, compiling and testing code, and debugging and correcting defects found in code. \n",
+    " * Summary: Introduces computer programming terminology and techniques as applied to specific engineering applications. Topics include electrical circuit analysis, audio signal processing, image processing, and interfacing with hardware such as microcontrollers and analog-to-digital converters application. The course covers reading and documenting code, compiling and testing code, and debugging and correcting defects found in code. \n",
     " \n",
     "### Course Meeting Times and Locations\n",
     "\n",
@@ -41,18 +41,18 @@
     "\n",
     "### Textbook\n",
     "\n",
-    "_Problem Solving with Python_ by Peter D. Kazarinoff. Available on LeanPub.com and online at [problemsolvingwithpython.com](https://problemsovlingwithpython.com)\n",
+    "_Problem Solving with Python_ by Peter D. Kazarinoff. Available on LeanPub.com and online at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/)\n",
     "\n",
     "### Other course materials\n",
     "\n",
     " * USB thumb drive. 1GB size or larger will work fine. Bring to every class.\n",
     " * Scientific Calculator\n",
-    " * You need access the course programming environment, available at [https://engr114.org](https://engr114.org]). An @pcc.edu email address and password is needed to login.\n",
-    " * An ESP8266-based microcontroller and micro-USB data cable. [AdaFruit Feather Huzzah ESP8266](https://www.adafruit.com/product/3046) or [ESP8266 Module ESP-12E NodeMCU](http://a.co/d/jh5yMHa). Board and USB cable will be available for purchase for $10.\n",
+    " * Access to the course programming environment, available online at [https://engr114.org](https://engr114.org). An @pcc.edu email address and password is needed to login. Log into your @pcc.edu email and then open the course programming environment.\n",
+    " * An ESP8266-based microcontroller and micro-USB data cable. [AdaFruit Feather Huzzah ESP8266](https://www.adafruit.com/product/3046) or [ESP8266 Module ESP-12E NodeMCU](http://a.co/d/jh5yMHa). Microcontroller and USB cable will be available for purchase for $10.\n",
     "\n",
-    "All PCC Computer Labs have Internet access. You need to be signed into your myPCC email account before you log in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks. But remember, you need an Internet connection to use it.\n",
+    "All PCC Computer Labs have Internet access. Remember to sign into your myPCC email account before logging in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks that have an Internet connection. \n",
     "\n",
-    "If you would like to download and install the programming environment on your home computer, the download is free and available at [https://www.anaconda.com/download/](https://www.anaconda.com/download/)."
+    "You can also download and install the programming environment on a home computer. The download is free and available at [https://www.anaconda.com/download/](https://www.anaconda.com/download/)."
    ]
   },
   {
@@ -68,7 +68,7 @@
    "source": [
     "### Homework\n",
     "\n",
-    "Homework is intended as a means of practicing the concepts presented in class.  Timely submission of homework via Desire2Learn (D2L) is required.  **No late homework is accepted in this course**  The D2L upload folder will close to submissions after the assignment deadline. With this in mind, your **lowest homework score will be dropped**. All homework assignments are weighted equally. Check D2L for assignments, homework format and submission deadlines."
+    "Homework is intended as a means of practicing the concepts presented in class.  Timely submission of homework via Desire2Learn (D2L) is required.  **No late homework is accepted in this course**  The D2L upload folder will close to submissions after the assignment deadline. With this in mind, your **lowest homework score will be dropped**.  All homework assignments are weighted equally. Check D2L for assignments, homework format, and submission deadlines."
    ]
   },
   {
@@ -77,16 +77,16 @@
    "source": [
     "### Exams\n",
     "\n",
-    "It is the student's responsibility to notify the instructor **at least 3 days prior to the date of an exam** if the student is unable to take the exam when it is scheduled.  Make-up exams, if allowed, will be scheduled by the instructor after consulting with the student **prior** to the original date of the exam. I look forward to working with any students who has testing accommodations. It is the student's responsibility to set up a meeting **at least 1 week prior to the exam date** to review exam protocol as the testing center does not have laptops with the course programming environment installed.\n",
+    "If a student is unable to take the exam when it is scheduled, it is the student's responsibility to notify the instructor **at least 1 week prior to the date of an exam**. Make-up exams, if allowed, will be scheduled by the instructor after consulting with the student **prior** to the original date of the exam. I look forward to working with any students who have testing accommodations. It is the student's responsibility to set up a meeting **at least 1 week prior to the exam date** to review exam protocol as the testing center does not have laptops with the course programming environment installed.\n",
     "\n",
     "#### During Exams:\n",
     "\n",
     " * Exams will be taken during lecture or lab time in the classroom.\n",
-    " * Exams will have two parts, a written portion and a computer portion\n",
-    "   * During the written portion you can not use Python and computer monitors must be off\n",
-    "   * During the computer portion you must use Python on the computers in the classroom. No student laptops allowed on exams.\n",
+    " * Exams will have two parts, a written portion, and a computer portion\n",
+    "   * During the written portion you cannot use Python and computer monitors must be off\n",
+    "   * During the computer portion, you must use Python on the computers in the classroom. No student laptops allowed on exams.\n",
     " * Generally, a calculator and one page of notes are allowed on the exams.\n",
-    " * You must complete the exam during the exam period. Uploads after the deadline will not receive credit."
+    " * You must complete each exam during the exam period. Uploads after the deadline will receive zero credit."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "### Labs\n",
     "\n",
-    "Typically, lecture will be held early in the week and lab held later in the week.  This is subject to change.  Lab assignments are typically due at the end of the lab period, uploaded to D2L. **No late labs will be accepted**.  **You must be present in lab to receive credit for the lab assignment**. Your **lowest lab score will be dropped**. Lab assignments and grading are subject to change throughout the quarter. Check D2L for specific lab submission deadlines and requirements."
+    "Typically, lecture is held early in the week and lab held later in the week.  This is subject to change.  Lab assignments are typically due at the end of the lab period, uploaded to D2L. **No late labs will be accepted**.  **You must be present in lab to receive credit for the lab assignment**. Your **lowest lab score will be dropped**. Lab assignments and grading are subject to change throughout the quarter. Check D2L for specific lab submission deadlines and requirements."
    ]
   },
   {
@@ -104,7 +104,7 @@
    "source": [
     "### In-Class Assignments\n",
     "\n",
-    "Most lecture days will include an in-class assignment that needs to be uploaded to D2L by the end of the class period. See D2L for specific in-class assignment details. **No late in-class assignments will be accepted**.  **You must be present in lecture to receive credit for the in-class assignment**. Your **lowest in-class assignment score will be dropped**. In-class assignments and grading are subject to change throughout the quarter."
+    "Most lecture days include an in-class assignment that needs to be uploaded to D2L by the end of the class period. See D2L for specific in-class assignment details. **No late in-class assignments will be accepted**.  **You must be present in lecture to receive credit for the in-class assignment**. Your **lowest in-class assignment score will be dropped**. In-class assignments and grading are subject to change throughout the quarter."
    ]
   },
   {
@@ -113,7 +113,7 @@
    "source": [
     "### Group Project\n",
     "\n",
-    "You will complete a group project over the course of the quarter. This project is a group assignment. Project delivery will be at the end of the quarter. Students must be present when their project is delivered to receive credit. During the quarter there will be occasional project assignments to complete. See D2L for the project description and grading details. **No late projects will be accepted**."
+    "You will complete a group project throughout the quarter. Project delivery will be at the end of the quarter. Students must be present when their project is delivered to receive credit. During the quarter, there will be occasional project assignments to complete. See D2L for the project description and grading details. **No late projects will be accepted**."
    ]
   },
   {
@@ -147,17 +147,17 @@
     "\n",
     "### Class Rules\n",
     "\n",
-    "Be respectful and courteous to others.  Failure to do so may result in the lowering of the course grade.  Cheating will not be tolerated, and may result in failure of the entire course.\n",
+    "Be respectful and courteous to others.  Failure to do so may result in lowering your course grade.  Cheating will not be tolerated, and may result in failure of the entire course.\n",
     "\n",
     "### Attendance, Make-Up, and Other Class Policies\n",
     "\n",
-    "Attendance at all labs and lectures is required.  Attendance may be used in the grading process.  Tardy students may be denied entry to class or docked in credit for in-class assignments.  Poor attendance or repeated tardiness will have a negative effect on a student's grade for the course.\n",
+    "Attendance at all labs and lectures is required.  Attendance may be used in the grading process.  Tardy students may be denied entry to class or docked in credit for in-class assignments.  Poor attendance or repeated tardiness will have an adverse effect on a student's grade for the course.\n",
     "\n",
-    "Students should check their PCC email at least three times a week to ensure receipt of announcements and important information about the class.\n",
+    "Students should check their PCC email at least three times a week to ensure receipt of announcements and essential information about the class.\n",
     "\n",
-    "Students may only attend this course if registered.  Students who are unable to attend must drop the course online or through the Registration Office.  To have tuition charges removed, the course must be dropped by the student before the drop deadline posted on MyPCC.  Students who never attend, or stop attending, without dropping may receive a W or a failing grade and will be required to pay for the course.\n",
+    "Students may only attend this course if registered.  Students who are unable to attend must drop the course online or through the Registration Office.  To remove tuition charges, the course must be dropped by the student before the drop deadline posted on MyPCC.  Students who never attend, or stop attending, without dropping may receive a W or a failing grade and will be required to pay for the course.\n",
     "\n",
-    "The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather or class situations.  To find out if the college is closed due to bad weather please check the [PCC Website](http://www.pcc.edu/), call the PCC switchboard at 503-244-6111, check the local radio and TV stations, or subscribe to [FlashAlerts](https://www.pcc.edu/about/announcements/closure-information.html)."
+    "The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather or class situations.  To find out if the college is closed due to bad weather, please check the [PCC Website](http://www.pcc.edu/), call the PCC switchboard at 503-244-6111, check the local radio and TV stations, or subscribe to [FlashAlerts](https://www.pcc.edu/about/announcements/closure-information.html)."
    ]
   },
   {
@@ -168,13 +168,13 @@
     "(Note: See electronic copy for clickable links to these resources.)\n",
     "\n",
     " * [Think Python](http://greenteapress.com/think-python) is a free textbook in PDF form, or is available for purchase in print form from Amazon.\n",
-    "    \n",
+    " * [Get Programming](https://www.manning.com/books/get-programming) by Ana Bell is another good book. It is available at [Manning Publications](https://www.manning.com/)\n",
     "\n",
     "* [PCC Grading Guidelines](http://www.pcc.edu/resources/academic/standards-practices/AcademicStandardsandPractices-GradingGuidelines.html)\n",
     " * [Add/drop/withdraw deadlines for the term](http://www.pcc.edu/registration/dropping.html)\n",
     " \n",
-    "* [PCC Academic Calendar](http://www.pcc.edu/registration/academic-calendar.html)\n",
-    "* [PCC Nondiscrimination Statement](https://www.pcc.edu/about/equity-inclusion/eeo-statement.html)\n",
+    " * [PCC Academic Calendar](http://www.pcc.edu/registration/academic-calendar.html)\n",
+    " * [PCC Nondiscrimination Statement](https://www.pcc.edu/about/equity-inclusion/eeo-statement.html)\n",
     "\n",
     "#### Student services: \n",
     "\n",
@@ -192,7 +192,7 @@
     "     \n",
     " * Use of cell phones and other personal electronic devices, unless otherwise stated, is not allowed during classes, labs, or exams.\n",
     " \n",
-    " * The unauthorized recording (audio, video, or still pictures) of course sessions and distribution of said recordings is not permitted.\n",
+    " * The unauthorized recording (audio, video, or still pictures) of course sessions, including recording other students, and distribution of said recordings is not permitted.\n",
     " \n",
     " * The instructor reserves the right to modify course content and/or substitute assignments and learning activities in response to institutional, weather, or class situations."
    ]
@@ -205,7 +205,7 @@
     "\n",
     "Students working with the Office for Students with Disabilities that may require classroom or course adjustment or accommodation should make their needs known to the instructor as early as possible.  The Office for Students with Disabilities may be contacted at: \n",
     "\n",
-    "[www.pcc.edu/disability](https://pcc.edu/disability)\n",
+    "[https://pcc.edu/disability](https://pcc.edu/disability)\n",
     "\n",
     "Sylvania ST 229\n",
     "\n",
@@ -233,7 +233,7 @@
    "source": [
     "### Academic Integrity\n",
     "\n",
-    "Students are required to complete this course in accordance with the PCC Student Rights and Responsibilities Handbook.  Dishonest activities such as cheating on exams and submitting or copying work done by others will result in disciplinary actions including, but not limited to, receiving a failing grade in the course."
+    "Students are required to complete this course in accordance with the [PCC Student Rights and Responsibilities Handbook](https://www.pcc.edu/about/policy/student-rights/documents/student-conduct.pdf).  Dishonest activities such as cheating on exams and submitting or copying work done by others will result in disciplinary actions including, but not limited to, receiving a failing grade in the course."
    ]
   },
   {
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
