added homework column to syllabus schedule

--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q1.ipynb
@@ -47,12 +47,12 @@
     "\n",
     " * USB thumb drive. 1GB size or larger will work fine. Bring to every class.\n",
     " * Scientific Calculator\n",
-    " * Access to the course programming environment, available online at [https://engr114.org](https://engr114.org). An @pcc.edu email address and password is needed to login. Log into your @pcc.edu email and then open the course programming environment.\n",
+    " * Access to the course programming environment, available online at [https://engr114.org](https://engr114.org). An @pcc.edu email address and password is needed to login. Log into your @pcc.edu email account and then open the course programming environment.\n",
     " * An ESP8266-based microcontroller and micro-USB data cable. [AdaFruit Feather Huzzah ESP8266](https://www.adafruit.com/product/3046) or [ESP8266 Module ESP-12E NodeMCU](http://a.co/d/jh5yMHa). Microcontroller and USB cable will be available for purchase for $10.\n",
     "\n",
     "All PCC Computer Labs have Internet access. Remember to sign into your myPCC email account before logging in to the course programming environment. The course programming environment will work on all student laptops, desktops, and Chromebooks that have an Internet connection. \n",
     "\n",
-    "You can also download and install the programming environment on a home computer. The download is free and available at [https://www.anaconda.com/download/](https://www.anaconda.com/download/)."
+    "You can also download and install the programming environment on a home computer. The download is free and available at: [https://www.anaconda.com/download/](https://www.anaconda.com/download/)."
    ]
   },
   {
@@ -68,7 +68,7 @@
    "source": [
     "### Homework\n",
     "\n",
-    "Homework is intended as a means of practicing the concepts presented in class.  Timely submission of homework via Desire2Learn (D2L) is required.  **No late homework is accepted in this course**  The D2L upload folder will close to submissions after the assignment deadline. With this in mind, your **lowest homework score will be dropped**.  All homework assignments are weighted equally. Check D2L for assignments, homework format, and submission deadlines."
+    "Homework is intended as a means of practicing the concepts presented in class.  Timely submission of homework via Desire2Learn (D2L) is required.  **No late homework is accepted in this course.**  The D2L upload folder will close to submissions after the assignment deadline. With this in mind, your **lowest homework score of quarter will be dropped**.  All homework assignments are weighted equally. Check D2L for assignments, homework format, and submission deadlines."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "### Labs\n",
     "\n",
-    "Typically, lecture is held early in the week and lab held later in the week.  This is subject to change.  Lab assignments are typically due at the end of the lab period, uploaded to D2L. **No late labs will be accepted**.  **You must be present in lab to receive credit for the lab assignment**. Your **lowest lab score will be dropped**. Lab assignments and grading are subject to change throughout the quarter. Check D2L for specific lab submission deadlines and requirements."
+    "Typically, lecture is held early in the week and lab held later in the week.  This is subject to change.  Lab assignments are typically due at the end of the lab period, uploaded to D2L. **No late labs will be accepted**.  **You must be present in lab to receive credit for the lab assignment**. Your **lowest lab score of the quarter will be dropped**. Lab assignments and grading are subject to change throughout the quarter. Check D2L for specific lab submission deadlines and requirements."
    ]
   },
   {
@@ -104,7 +104,7 @@
    "source": [
     "### In-Class Assignments\n",
     "\n",
-    "Most lecture days include an in-class assignment that needs to be uploaded to D2L by the end of the class period. See D2L for specific in-class assignment details. **No late in-class assignments will be accepted**.  **You must be present in lecture to receive credit for the in-class assignment**. Your **lowest in-class assignment score will be dropped**. In-class assignments and grading are subject to change throughout the quarter."
+    "Most lecture days include an in-class assignment that needs to be uploaded to D2L by the end of the class period. See D2L for specific in-class assignment details. **No late in-class assignments will be accepted**.  **You must be present in lecture to receive credit for the in-class assignment**. Your **lowest in-class assignment score of the quarter will be dropped**. In-class assignments and grading are subject to change throughout the quarter."
    ]
   },
   {
@@ -128,7 +128,7 @@
     " * In-class: 5%\n",
     " * Project: 15%\n",
     " \n",
-    "Grades will be rounded to the nearest two significant figures (nearest whole percentage point) and converted to letter grades according to the following. 84.4999999% rounds to an 84%, 84.50000% rounds to 85%.\n",
+    "Grades will be rounded to the nearest two significant figures (nearest whole percentage point) and converted to letter grades according to the table below. 84.4999999% rounds to an 84%, 84.50000% rounds to 85%.\n",
     "\n",
     "| Grade Percentage | Letter Grade |\n",
     "| --- | --- |\n",
@@ -244,19 +244,19 @@
     "\n",
     "The course schedule below is subject to change. Check D2L for specific course deadlines.\n",
     "\n",
-    "| Week | Lecture | Lab |\n",
-    "| --- | --- | --- |\n",
-    "| Week 1 | The Python REPL | Lab 1: Calculations |\n",
-    "| Week 2 | Data types and variables | Lab 2: Data Types |\n",
-    "| Week 3 | Data structures, input and print | Lab 3: User Input |\n",
-    "| Week 4 | Plotting | Lab 4: Plotting |\n",
-    "| Week 5 | Functions | Lab 5: Web API's |\n",
-    "| Week 6 | Review | **Exam 1** |\n",
-    "| Week 7 | If, elif, else | Lab 6: Audio Filtering |\n",
-    "| Week 8 | Loops | Lab 7: Taylor Series |\n",
-    "| Week 9 | MicroPython | Lab 8: MicroPython |\n",
-    "| Week 9 | External Hardware | Lab 9: External Hardware |\n",
-    "| Week 10 | Review | **Exam 2** |\n",
+    "| Week | Lecture | Lab | Homework Due |\n",
+    "| --- | --- | --- | --- |\n",
+    "| Week 1 | The Python REPL | Lab 1: Calculations | |\n",
+    "| Week 2 | Data types and variables | Lab 2: Data Types | Homework 1 |\n",
+    "| Week 3 | Data structures, input and print | Lab 3: User Input | Homework 2 |\n",
+    "| Week 4 | Plotting | Lab 4: Plotting | Homework 3 |\n",
+    "| Week 5 | Functions | Lab 5: Web API's | Homework 4 |\n",
+    "| Week 6 | Review | **Exam 1** | |\n",
+    "| Week 7 | If, elif, else | Lab 6: Audio Filtering | |\n",
+    "| Week 8 | Loops | Lab 7: Taylor Series | Homework 5 |\n",
+    "| Week 9 | MicroPython | Lab 8: MicroPython | Homework 6 |\n",
+    "| Week 9 | External Hardware | Lab 9: External Hardware | |\n",
+    "| Week 10 | Review | **Exam 2** | |\n",
     "| Finals Week | Project Delivery | |"
    ]
   },
@@ -284,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
